@@ -163,21 +163,49 @@ TextureTile* TileLoader::loadTile( int tilx, int tily, int tileLevel )
 
 int TileLoader::levelToRow( int level )
 {
+    if ( level < 0 )
+    {
+        qDebug()
+        << QString( "TileLoader::levelToRow(): Invalid level: %1" )
+        .arg( level );
+        return -1;
+    }
     return (int)pow( 2.0, (double)( level ) );
 }
 
 int TileLoader::levelToColumn( int level )
 {
+    if ( level < 0 )
+    {
+        qDebug()
+        << QString( "TileLoader::levelToColumn(): Invalid level: %1" )
+        .arg( level );
+        return -1;
+    }
     return (int)pow( 2.0, (double)( level + 1 ) );
 }
 
 int TileLoader::rowToLevel( int row )
 {
+    if ( row < 1 )
+    {
+        qDebug()
+        << QString( "TileLoader::rowToLevel(): Invalid number of rows: %1" )
+        .arg( row );
+        return -1;
+    }
     return (int)( log( row ) / log( 2 ) );
 }
 
 int TileLoader::columnToLevel( int column )
 {
+    if ( column < 2 )
+    {
+        qDebug()
+        << QString( "TileLoader::columnToLevel(): Invalid number of columns: %1" )
+        .arg( column );
+        return -1;
+    }
     return (int)( log( column / 2 ) / log( 2 ) );
 }
 
